2020-08-28  Karl Berry  <karl@tug.org>

	* texmfmp.c (input_line): always clear errno before calling getc,
	else an EINTR errno might persist, masking a real EOF. On the other
	hand, loop as long as we have EOF && EINTR so we don't prematurely
	stop reading characters.
	https://tug.org/pipermail/tex-k/2020-August/003297.html

2020-07-18  Karl Berry  <karl@freefriends.org>

	* texmfmp.c: reformat so that all function return types and names
	both are at the beginning of a line.

2020-07-17  Karl Berry  <karl@freefriends.org>

	* texmfmp.c (calledit): close only open input files,
	not non-files resulting from terminal interactions.
	This means looking at each element of input_stack
	instead of only looking at the input_file array. Painful.
	Original report from Xiao Zhang,
	https://tex.stackexchange.com/q/552113

2020-01-01  Akira Kakuto  <kakuto@w32tex.org>

	* printversion.c: Update copyright year.

2019-12-10  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>
	
	* do_dump [FMT_COMPRESS]: change conditional from XeTeX.

2019-08-10  Andreas Scherer  <https://ascherer.github.io>

	* lib.h: add missing prototypes from 'openclose.c' and 'texmfmp.c'.

2019-08-09  Karl Berry  <karl@freefriends.org>

	* texmfmp.c (texmf_yesno): no longer static, since we call it
	from tex.ch.

	* texmfmp.c: doc fixes; most "fixme"s were nothing that we ever
	need to fix at this late date.

2019-08-08  Akira Kakuto  <kakuto@w32tex.org>

	* texmfmp.c: This file is not used in lua[jit]tex.

2019-08-07  Akira Kakuto  <kakuto@w32tex.org>

	* texmfmp.c: Improve support of non-ascii path names in
	synctex. Support -cnf-line=command_line_encoding=value.
	These changes are for Windows only.

2019-08-06  Karl Berry  <karl@freefriends.org>

	* texmfmp.c (long_options): new option --cnf-line.
	(user_cnf_lines, user_cnf_nlines): new globals.
	(maininit): call kpathsea_cnf_line_env_progname
	on each specified --cnf-line.
	(parse_options): recognize it and save each arg.